# tdd-book-superlists

./: .gitignore  functional_tests.py  pyproject.toml
superlists/: pyproject.toml  settings.py
