[tool.poetry]
name = "superlists"
version = "0.1.0"
description = "book-tdd"
authors = ["Edson <edandrade.code@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
selenium = "^4.16.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
